<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom"
            android:padding="5dp"
            android:src="@drawable/ic_back" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="96dp"
            android:layout_height="62dp"
            android:visibility="visible"
            app:srcCompat="@drawable/pic1"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="14dp"
            android:contentDescription="@string/trademark" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/inalfa"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingStart="30dp"
            android:paddingEnd="20dp"
            tools:layout_editor_absoluteX="193dp" />
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text=""
            android:textSize="10sp"
            android:textColor="@color/black"
            android:paddingStart="30dp"
            android:paddingEnd="20dp"
            tools:layout_editor_absoluteX="193dp" />



    </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">


      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="20sp"
          android:text="@string/measuring_point_set"
          android:textStyle="bold"
          android:textColor="@color/black"
          android:layout_marginStart="20dp"
          android:paddingTop="10dp"
          android:paddingBottom="10dp"/>

      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginLeft="5dp"
          android:layout_marginRight="5dp"
          android:background="@color/black"/>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="20dp">

          <Button
              android:id="@+id/btn_point_set"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="50dp"
              android:background="@drawable/btn"
              android:text="@string/measuring_point_conf" />

          <Button
              android:id="@+id/btn_point_adjust"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/btn"
              android:layout_marginStart="100dp"
              android:text="@string/measuring_point_adjust"/>

      </LinearLayout>

  </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/start_measure"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/black"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/btn_ordered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn"
                android:layout_marginStart="50dp"
                android:text="@string/ordinal_measurement"/>

            <Button
                android:id="@+id/btn_disordered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn"
                android:layout_marginStart="100dp"
                android:text="@string/disordered_measure"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/data_analyse"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/black"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/btn_outcome_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn"
                android:layout_marginStart="50dp"
                android:text="@string/result_review"/>

            <Button
                android:id="@+id/btn_upload_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn"
                android:layout_marginStart="100dp"
                android:text="@string/data_upload"/>

        </LinearLayout>

    </LinearLayout>





</LinearLayout>