<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1.5">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DInS"
                android:textColor="@color/first_used"
                android:textStyle="bold"
                android:textSize="120dp"/>
            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center_horizontal|center_vertical"
                android:layout_gravity="clip_vertical"
                android:text="R"
                android:textStyle="bold"
                android:textSize="40sp"
                android:textColor="@color/first_used"
                android:background="@drawable/r_border"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv123"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Inspire the World, Create the future!"
            android:textColor="@color/first_used"
            android:textSize="20sp"
            android:textStyle="italic"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <!--采集人员id-->
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--TextView 文本显示-->

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/username_pic" />


                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColor="@color/first_used"
                    android:text="@string/collect_inf"
                    tools:ignore="RtlHardcoded" />
                <!--EditText 文本显示-->
                <!---android:textColorHint="@color/"-->
                <EditText
                    android:id="@+id/ed_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="admin"
                    android:hint="@string/hint_message" />


            </LinearLayout>


            <!--密码-->
            <LinearLayout
                android:id="@+id/ll_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--TextView 文本显示-->
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/password" />

                <!--EditText 文本显示-->
                <!---android:textColorHint="@color/"-->
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColor="@color/first_used"
                    android:text="@string/password"
                    tools:ignore="RtlHardcoded" />

                <EditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="admin"
                    android:hint="@string/enterPassword" />

            </LinearLayout>

            <!--登录按钮-->
            <Button
                android:id="@+id/btn_login_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/btn"
                android:text="@string/enter"
                android:textStyle="bold" />




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>


    </LinearLayout>


</LinearLayout>

